--- a/languages/ru_RU.po
+++ b/languages/ru_RU.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: brainworks-v4.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-02 11:12+0000\n"
-"PO-Revision-Date: 2018-11-02 11:21+0000\n"
+"POT-Creation-Date: 2018-11-08 08:48+0000\n"
+"PO-Revision-Date: 2018-11-08 08:49+0000\n"
 "Last-Translator: YegorMamay <yegor19.05@gmail.com>\n"
 "Language-Team: Русский\n"
 "Language: ru_RU\n"
@@ -13,6 +13,38 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Loco https://localise.biz/"
+
+#. Name of the template
+msgid "Sidebar Left"
+msgstr ""
+
+#: searchform.php:2
+msgid "Search"
+msgstr "Поиск"
+
+#. Name of the template
+msgid "Only Logged In"
+msgstr ""
+
+#: page-auth-only.php:12
+msgid "You must be logged in to see this page!"
+msgstr "Вам нужно войти, чтобы просматривать этот контент"
+
+#. Name of the template
+msgid "Sidebar Right"
+msgstr ""
+
+#: search.php:4
+msgid "Search Results for"
+msgstr "Результат поиска для"
+
+#. Name of the template
+msgid "Sitemap Page"
+msgstr ""
+
+#. Name of the template
+msgid "Home Page"
+msgstr ""
 
 #: 404.php:7
 msgid "Error"
@@ -30,141 +62,131 @@ msgstr "Вернуться на главную"
 msgid "Or use search"
 msgstr "Или используйте поиск"
 
-#: category.php:5 loops/content-blog-1-sbl.php:29
-#: loops/content-blog-1-sbr.php:26 loops/content-blog-2.php:25
-#: loops/content-blog-3.php:26
+#. Name of the template
+msgid "Page Without Breadcrumbs"
+msgstr ""
+
+#: category.php:5 loops/content-blog-1-sbr.php:26 loops/content-blog-2.php:25
+#: loops/content-blog-1-sbl.php:29 loops/content-blog-3.php:26
 msgid "Category"
 msgstr "Рубрика"
-
-#: footer.php:16
-msgid "Developed by"
-msgstr "Сайт разработан"
-
-#: footer.php:29
-msgid "Edit Scroll Top"
-msgstr ""
-
-#: footer.php:32
-msgid "Edit Analytics Tracking Code"
-msgstr ""
-
-#: footer.php:35
-msgid "Edit Login Logo"
-msgstr ""
-
-#. Name of the template
-msgid "Only Logged In"
-msgstr ""
-
-#: page-auth-only.php:12
-msgid "You must be logged in to see this page!"
-msgstr "Вам нужно войти, чтобы просматривать этот контент"
-
-#. Name of the template
-msgid "Home Page"
-msgstr ""
 
 #. Name of the template
 msgid "Landing"
 msgstr ""
 
-#. Name of the template
-msgid "Page Without Breadcrumbs"
+#: tag.php:5
+msgid "Tag"
+msgstr ""
+
+#: header.php:91
+msgid "Call back"
+msgstr "обратный звонок"
+
+#: footer.php:36
+msgid "Developed by"
+msgstr "Сайт разработан"
+
+#: footer.php:54
+msgid "Edit Scroll Top"
+msgstr ""
+
+#: footer.php:57
+msgid "Edit Analytics Tracking Code"
+msgstr ""
+
+#: footer.php:60
+msgid "Edit Login Logo"
 msgstr ""
 
 #. Name of the template
 msgid "Page Without Title"
 msgstr ""
 
-#. Name of the template
-msgid "Sidebar Left"
+#: loops/content-blog-1-sbr.php:12 loops/content-blog-2.php:11
+#: loops/content-blog-1-sbl.php:15 loops/content-blog-3.php:12
+msgid "By"
+msgstr "От"
+
+#: loops/content-blog-1-sbr.php:28 loops/content-blog-2.php:27
+#: loops/content-blog-1-sbl.php:31 loops/content-blog-3.php:28
+#: loops/comments.php:20
+msgid "Comments"
+msgstr "Комментарии"
+
+#: loops/content-blog-1-sbr.php:29 loops/content-blog-2.php:28
+#: loops/content-blog-1-sbl.php:32 loops/content-blog-3.php:29
+#: loops/comments.php:21
+msgid "None"
+msgstr "Нет"
+
+#: loops/content-blog-1-sbr.php:45 loops/content-blog-2.php:41
+#: loops/content-blog-1-sbl.php:45 loops/content-2.php:49
+#: loops/content-blog-3.php:42 loops/content.php:53
+msgid "Previous"
+msgstr "Предыдущая"
+
+#: loops/content-blog-1-sbr.php:46 loops/content-blog-2.php:42
+#: loops/content-blog-1-sbl.php:46 loops/content-2.php:50
+#: loops/content-blog-3.php:43 loops/content.php:54
+msgid "Next"
+msgstr "Следующая"
+
+#: loops/content-2.php:34 inc/shortcodes.php:360
+msgid "Continue reading"
+msgstr "Читать дальше"
+
+#: loops/content-search.php:21
+msgid "Sorry, your search yielded no results."
+msgstr "Извините, Ваша попытка не принесла результата."
+
+#: loops/content.php:31
+msgid " <i class=\"glyphicon glyphicon-arrow-right\"></i>"
 msgstr ""
 
-#. Name of the template
-msgid "Sidebar Right"
-msgstr ""
+#: loops/comments.php:9
+msgid "This post is password protected. Enter the password to view comments."
+msgstr "Эта запись защищена паролем."
 
-#. Name of the template
-msgid "Sitemap Page"
-msgstr ""
+#: loops/comments.php:18
+msgid "Feedback"
+msgstr "Отзыв"
 
-#: search.php:4
-msgid "Search Results for"
-msgstr "Результат поиска для"
+#: loops/comments.php:56
+msgid "Logged in as"
+msgstr "Вы вошли как"
 
-#: searchform.php:2
-msgid "Search"
-msgstr "Поиск"
+#: loops/comments.php:58
+msgid "Log out of this account"
+msgstr "Выйти из аккаунта"
 
-#: tag.php:5
-msgid "Tag"
-msgstr ""
+#: loops/comments.php:58
+msgid "Log out"
+msgstr "Выйти"
 
-#: inc/admin.php:10
-msgid "Developed by:"
-msgstr "Разработчик:"
+#: loops/comments.php:63 loops/comments.php:66
+msgid "Your name"
+msgstr "Ваше имя"
 
-#: inc/admin.php:11
-msgid "https://brainworks.com.ua"
-msgstr ""
+#: loops/comments.php:64
+msgid "(required)"
+msgstr "(обязательно)"
 
-#: inc/admin.php:12
-msgid "brainworks.com.ua"
-msgstr ""
+#: loops/comments.php:70 loops/comments.php:73
+msgid "Your email address"
+msgstr "Ваш email"
 
-#: inc/admin.php:16 inc/admin.php:82
-msgid "Running PHP version"
-msgstr ""
+#: loops/comments.php:71
+msgid "(required, but will not be published)"
+msgstr "(обязательно)"
 
-#: inc/admin.php:20
-#, php-format
-msgid "%d request pear %s sec."
-msgstr ""
+#: loops/comments.php:82 loops/comments.php:83
+msgid "Your comment"
+msgstr "Ваш комментарий"
 
-#: inc/admin.php:25
-#, php-format
-msgid "Spent %d Mb of memory (including unused pages %d Mb)"
-msgstr ""
-
-#: inc/admin.php:50
-msgid "Support:"
-msgstr "Поддержка:"
-
-#: inc/admin.php:51 inc/admin.php:52
-msgid "web@brainworks.com.ua"
-msgstr ""
-
-#: inc/admin.php:57
-msgid "Tel:"
-msgstr ""
-
-#: inc/admin.php:58 inc/admin.php:59
-msgid "+38 (063) 20-37-137"
-msgstr ""
-
-#: inc/auth.php:74
-msgid "Password is incorrect!"
-msgstr "Неверный пароль!"
-
-#: inc/auth.php:77
-msgid "Login is incorrect!"
-msgstr "Неверный логин!"
-
-#: inc/auth.php:226
-msgid "Passwords must be the same!"
-msgstr "Пароль должен совпадать!"
-
-#: inc/auth.php:229
-msgid "Error with creating user. Please, try again later!"
-msgstr "Ошибка! Попробуйте позже."
-
-#: inc/auth.php:232
-msgid "User with this login or email has already registered"
-msgstr "Пользователь с таким логином или почтой уже зарегистрирован"
-
-#: inc/auth.php:236
-msgid "Login or password are incorrect!"
-msgstr "Неверный логин или пароль!"
+#: loops/comments.php:88
+msgid "Submit comment"
+msgstr "Отправить комментарий"
 
 #: inc/customizer.php:30
 msgid "Theme Options"
@@ -410,37 +432,9 @@ msgstr ""
 msgid "Phone №4"
 msgstr ""
 
-#: inc/feedback.php:30
-msgid "at"
-msgstr "в"
-
-#: inc/feedback.php:34
-msgid "Your comment is awaiting moderation."
-msgstr "Ваш комментарий ожидает одобрения модератора."
-
-#: inc/feedback.php:46
-msgid "Edit"
-msgstr "Редактировать"
-
-#: inc/index-pagination.php:20
-msgid "<i class=\"fa fa-angle-left\"></i> Newer"
-msgstr "Новые"
-
-#: inc/index-pagination.php:21
-msgid "Older <i class=\"fa fa-angle-right\"></i>"
-msgstr "Старые"
-
 #: inc/login.php:21
 msgid "<strong>ERROR:</strong> The username and password is incorrect."
 msgstr "<strong>ОШИБКА:</strong> Неверный логин или пароль."
-
-#: inc/navbar.php:4
-msgid "Main Navigation"
-msgstr ""
-
-#: inc/navbar.php:5
-msgid "Second Menu"
-msgstr ""
 
 #: inc/setup.php:188
 msgid "Front page"
@@ -490,29 +484,139 @@ msgstr "Записи по метке: <b>%s</b>"
 msgid "%1$s from \"%2$s\" by tag: <b>%3$s</b>"
 msgstr "%1$s из \"%2$s\" по тегу: <b>%3$s</b>"
 
-#: inc/shortcodes.php:256
-msgid "Читать полностью"
+#: inc/auth.php:74
+msgid "Password is incorrect!"
+msgstr "Неверный пароль!"
+
+#: inc/auth.php:77
+msgid "Login is incorrect!"
+msgstr "Неверный логин!"
+
+#: inc/auth.php:226
+msgid "Passwords must be the same!"
+msgstr "Пароль должен совпадать!"
+
+#: inc/auth.php:229
+msgid "Error with creating user. Please, try again later!"
+msgstr "Ошибка! Попробуйте позже."
+
+#: inc/auth.php:232
+msgid "User with this login or email has already registered"
+msgstr "Пользователь с таким логином или почтой уже зарегистрирован"
+
+#: inc/auth.php:236
+msgid "Login or password are incorrect!"
+msgstr "Неверный логин или пароль!"
+
+#: inc/admin.php:10
+msgid "Developed by:"
+msgstr "Разработчик:"
+
+#: inc/admin.php:11
+msgid "https://brainworks.com.ua"
 msgstr ""
 
-#: inc/shortcodes.php:360 loops/content-2.php:34
-msgid "Continue reading"
-msgstr "Читать дальше"
-
-#: inc/shortcodes.php:395 inc/shortcodes.php:431
-msgid "Password"
-msgstr "Пароль"
-
-#: inc/shortcodes.php:427
-msgid "Email"
+#: inc/admin.php:12
+msgid "brainworks.com.ua"
 msgstr ""
 
-#: inc/shortcodes.php:435
-msgid "Retry password"
-msgstr "Повторите пароль"
+#: inc/admin.php:16 inc/admin.php:82
+msgid "Running PHP version"
+msgstr ""
 
-#: inc/shortcodes.php:440
-msgid "Register"
-msgstr "Зарегистрироваться"
+#: inc/admin.php:20
+#, php-format
+msgid "%d request pear %s sec."
+msgstr ""
+
+#: inc/admin.php:25
+#, php-format
+msgid "Spent %d Mb of memory (including unused pages %d Mb)"
+msgstr ""
+
+#: inc/admin.php:50
+msgid "Support:"
+msgstr "Поддержка:"
+
+#: inc/admin.php:51 inc/admin.php:52
+msgid "web@brainworks.com.ua"
+msgstr ""
+
+#: inc/admin.php:57
+msgid "Tel:"
+msgstr ""
+
+#: inc/admin.php:58 inc/admin.php:59
+msgid "+38 (063) 20-37-137"
+msgstr ""
+
+#: inc/custom-post-types.php:10 inc/custom-post-types.php:15
+msgid "Reviews"
+msgstr "Отзывы"
+
+#: inc/custom-post-types.php:11
+msgid "Review"
+msgstr ""
+
+#: inc/custom-post-types.php:48
+msgid "Additional"
+msgstr ""
+
+#: inc/custom-post-types.php:56
+msgid "Enable/Disable"
+msgstr ""
+
+#: inc/custom-post-types.php:58
+msgid "Display review on Home page."
+msgstr ""
+
+#: inc/custom-post-types.php:63
+msgid "Client"
+msgstr ""
+
+#: inc/custom-post-types.php:64
+msgid "Name Surname"
+msgstr ""
+
+#: inc/custom-post-types.php:69
+msgid "Location"
+msgstr ""
+
+#: inc/custom-post-types.php:74
+msgid "Facebook URL"
+msgstr ""
+
+#: inc/custom-post-types.php:80
+msgid "Instagram URL"
+msgstr ""
+
+#: inc/feedback.php:30
+msgid "at"
+msgstr "в"
+
+#: inc/feedback.php:34
+msgid "Your comment is awaiting moderation."
+msgstr "Ваш комментарий ожидает одобрения модератора."
+
+#: inc/feedback.php:46
+msgid "Edit"
+msgstr "Редактировать"
+
+#: inc/index-pagination.php:20
+msgid "<i class=\"fa fa-angle-left\"></i> Newer"
+msgstr "Новые"
+
+#: inc/index-pagination.php:21
+msgid "Older <i class=\"fa fa-angle-right\"></i>"
+msgstr "Старые"
+
+#: inc/navbar.php:4
+msgid "Main Navigation"
+msgstr ""
+
+#: inc/navbar.php:5
+msgid "Second Menu"
+msgstr ""
 
 #: inc/widgets.php:10
 msgid "Sidebar"
@@ -534,94 +638,33 @@ msgstr "Подвал"
 msgid "The footer widget area"
 msgstr ""
 
-#: loops/comments.php:9
-msgid "This post is password protected. Enter the password to view comments."
-msgstr "Эта запись защищена паролем."
-
-#: loops/comments.php:18
-msgid "Feedback"
-msgstr "Отзыв"
-
-#: loops/comments.php:20 loops/content-blog-1-sbl.php:31
-#: loops/content-blog-1-sbr.php:28 loops/content-blog-2.php:27
-#: loops/content-blog-3.php:28
-msgid "Comments"
-msgstr "Комментарии"
-
-#: loops/comments.php:21 loops/content-blog-1-sbl.php:32
-#: loops/content-blog-1-sbr.php:29 loops/content-blog-2.php:28
-#: loops/content-blog-3.php:29
-msgid "None"
-msgstr "Нет"
-
-#: loops/comments.php:56
-msgid "Logged in as"
-msgstr "Вы вошли как"
-
-#: loops/comments.php:58
-msgid "Log out of this account"
-msgstr "Выйти из аккаунта"
-
-#: loops/comments.php:58
-msgid "Log out"
-msgstr "Выйти"
-
-#: loops/comments.php:63 loops/comments.php:66
-msgid "Your name"
-msgstr "Ваше имя"
-
-#: loops/comments.php:64
-msgid "(required)"
-msgstr "(обязательно)"
-
-#: loops/comments.php:70 loops/comments.php:73
-msgid "Your email address"
-msgstr "Ваш email"
-
-#: loops/comments.php:71
-msgid "(required, but will not be published)"
-msgstr "(обязательно)"
-
-#: loops/comments.php:82 loops/comments.php:83
-msgid "Your comment"
-msgstr "Ваш комментарий"
-
-#: loops/comments.php:88
-msgid "Submit comment"
-msgstr "Отправить комментарий"
-
-#: loops/content-2.php:49 loops/content-blog-1-sbl.php:45
-#: loops/content-blog-1-sbr.php:45 loops/content-blog-2.php:41
-#: loops/content-blog-3.php:42 loops/content.php:53
-msgid "Previous"
-msgstr "Предыдущая"
-
-#: loops/content-2.php:50 loops/content-blog-1-sbl.php:46
-#: loops/content-blog-1-sbr.php:46 loops/content-blog-2.php:42
-#: loops/content-blog-3.php:43 loops/content.php:54
-msgid "Next"
-msgstr "Следующая"
-
-#: loops/content-blog-1-sbl.php:15 loops/content-blog-1-sbr.php:12
-#: loops/content-blog-2.php:11 loops/content-blog-3.php:12
-msgid "By"
-msgstr "От"
-
-#: loops/content-search.php:21
-msgid "Sorry, your search yielded no results."
-msgstr "Извините, Ваша попытка не принесла результата."
-
-#: loops/content.php:31
-msgid " <i class=\"glyphicon glyphicon-arrow-right\"></i>"
+#: inc/shortcodes.php:256
+msgid "Читать &rarr;"
 msgstr ""
 
-#: woocommerce/single-product/add-to-cart/simple.php:48
+#: inc/shortcodes.php:395 inc/shortcodes.php:431
+msgid "Password"
+msgstr "Пароль"
+
+#: inc/shortcodes.php:427
+msgid "Email"
+msgstr ""
+
+#: inc/shortcodes.php:435
+msgid "Retry password"
+msgstr "Повторите пароль"
+
+#: inc/shortcodes.php:440
+msgid "Register"
+msgstr "Зарегистрироваться"
+
 #: woocommerce/single-product/add-to-cart/variation-add-to-cart-button.php:30
+#: woocommerce/single-product/add-to-cart/simple.php:48
 msgid "Buy in one click"
 msgstr "Купить в один клик"
 
 #. Name of the theme
-msgid "brainworks-v4.8.3"
+msgid "watermax"
 msgstr ""
 
 #. Author of the theme
